# myapp

./: .replit  app.py  device_manager.py  routes.py  utils.py
FaceTimeCard/: models.py  scheduler.py
FaceTimeCard/instance/: attendance.db
FaceTimeCard/templates/: base.html  devices.html  index.html  logs.html  (+3 more)
Time17/: README_SCHEDULER.md  app.py  background_tasks.py  device_manager.py  error_logger.py  main.py  replit.md  routes.py  scheduler_health_monitor.py  scheduler_manager.bat  scheduler_service.py  start_scheduler.py
TimeFace5.5/: ENHANCED_SYNC_README.md  FACE_SYNC_SOLUTION_COMPLETE.md  SPECIFIC_IP_SYNC_SOLUTION.md  SYNC_SETUP_STATUS.md  cache_manager.py  check_actual_data.py  check_db.py  complete_hybrid_sync.py  comprehensive_sync.py  debug_face_templates.py  device_manager.py  enhanced_device_sync.py  enhanced_device_sync_old.py  enhanced_face_sync.py  hybrid_face_sync.py  main.py  models.py  performance_monitor.py  pyproject.toml  quick_face_sync_test.py  routes.py  scheduler_service.py  start_app.py  sync_performance_optimizer.py  sync_utility.py  websocket_events.py  working_sync_solution.py
TimeFace5.5/attached_assets/: Pasted-C-Users-mohamed-ilyas-AppData-Local-Programs-Python-Python313-Lib-site-packages-apscheduler-init--1756707049109_1756707049109.txt
TimeFace5.5/instance/: attendance.db
TimeFace5.5/static/css/: custom.css
TimeFace5.5/static/js/: main.js
TimeFace5.5/templates/: admin_users.html  base.html  database.html  devices.html  login.html  logs.html  reports.html  scheduler_info.html  settings.html  sync_monitor.html  users.html
(+8 files in other folders)
