[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "apscheduler>=3.11.0",
    "pandas>=2.3.2",
    "pyzk>=0.9",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "flask-socketio>=5.5.1",
]
